# app_demo

project_demo/: CMakeLists.txt  build.sh  build_libraries.sh
project_demo/cmake/: toolchain_rk3588.cmake
project_demo/inc/: config_manager.h  frame_parser.h  logger.h  mqtt_client.h  mqtt_test.h  uart.h  uart_manager.h
project_demo/lib/lib/: libjsoncpp.so.1.9.8  libpaho-mqtt3a.so.1.3.16  libpaho-mqtt3c.so.1  libpaho-mqtt3c.so.1.3.16  libpaho-mqttpp3.so.1.6.0
project_demo/lib/lib/cmake/PahoMqttCpp/: PahoMqttCppTargets.cmake
project_demo/lib/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig-release.cmake
project_demo/lib/lib/cmake/jsoncpp/: jsoncpp-targets-release.cmake  jsoncppConfig.cmake
project_demo/lib/lib/pkgconfig/: jsoncpp.pc
project_demo/lib_aarch64/lib/: libjsoncpp.so.1.9.8  libjsoncpp.so.27  libpaho-mqtt3a.so.1  libpaho-mqtt3a.so.1.3.16  libpaho-mqtt3c.so.1.3.16  libpaho-mqttpp3.so.1  libpaho-mqttpp3.so.1.6.0
project_demo/lib_aarch64/lib/cmake/PahoMqttCpp/: PahoMqttCppConfig.cmake  PahoMqttCppTargets-release.cmake
project_demo/lib_aarch64/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig.cmake  eclipse-paho-mqtt-cConfigVersion.cmake
project_demo/lib_aarch64/lib/pkgconfig/: jsoncpp.pc
project_demo/lib_sources/: cmake_aarch64.cmake
project_demo/src/: config_manager.cpp  frame_parser.cpp  logger.cpp  main.cpp  mqtt_client.cpp  mqtt_test.cpp  uart.cpp  uart_manager.cpp
